Implement six experience fixes
Entire-Checkpoint: 89df1838cb94

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,19 @@
 AIRTABLE_PAT=your_pat_here
 AIRTABLE_BASE_ID=appJAw6Q1CgRc8mCK
+PUBLIC_BASE_URL=http://localhost:3000
+BASIC_AUTH_USERNAME=
+BASIC_AUTH_PASSWORD=
+MAX_UPLOAD_SIZE_BYTES=20971520
+SUBMIT_RATE_LIMIT_MAX=10
+SEARCH_RATE_LIMIT_MAX=120
+UPLOAD_RATE_LIMIT_MAX=60
+AIRTABLE_TIMEOUT_MS=10000
+AIRTABLE_LIST_MAX_ATTEMPTS=3
+AIRTABLE_LIST_BASE_BACKOFF_MS=250
+UPLOAD_STORAGE_DRIVER=local
+UPLOAD_RETENTION_HOURS=72
+UPLOAD_CLEANUP_INTERVAL_MS=600000
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
+TELEMETRY_ENABLED=true
+TELEMETRY_SAMPLE_RATE=1
