Harden submissions and add admin mapping sync manager
Entire-Checkpoint: 89df1838cb94

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ SUBMIT_RATE_LIMIT_MAX=10
 SEARCH_RATE_LIMIT_MAX=120
 UPLOAD_RATE_LIMIT_MAX=60
 AIRTABLE_TIMEOUT_MS=10000
+AIRTABLE_CREATE_MAX_ATTEMPTS=3
+AIRTABLE_CREATE_BASE_BACKOFF_MS=300
 AIRTABLE_LIST_MAX_ATTEMPTS=3
 AIRTABLE_LIST_BASE_BACKOFF_MS=250
 UPLOAD_STORAGE_DRIVER=local
