Optimize lookup caching and submission retries
Entire-Checkpoint: 89df1838cb94

--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,17 @@ MAX_UPLOAD_SIZE_BYTES=20971520
 SUBMIT_RATE_LIMIT_MAX=10
 SEARCH_RATE_LIMIT_MAX=120
 UPLOAD_RATE_LIMIT_MAX=60
+LINKED_SEARCH_CACHE_TTL_MS=45000
+LINKED_SEARCH_EMPTY_CACHE_TTL_MS=120000
 AIRTABLE_TIMEOUT_MS=10000
 AIRTABLE_CREATE_MAX_ATTEMPTS=3
 AIRTABLE_CREATE_BASE_BACKOFF_MS=300
 AIRTABLE_LIST_MAX_ATTEMPTS=3
 AIRTABLE_LIST_BASE_BACKOFF_MS=250
+NEXT_PUBLIC_SUBMIT_TIMEOUT_MS=20000
+NEXT_PUBLIC_SUBMIT_MAX_ATTEMPTS=3
+NEXT_PUBLIC_SUBMIT_BASE_BACKOFF_MS=350
+NEXT_PUBLIC_SUBMIT_MAX_BACKOFF_MS=4000
 UPLOAD_STORAGE_DRIVER=local
 UPLOAD_RETENTION_HOURS=72
 UPLOAD_CLEANUP_INTERVAL_MS=600000
