Productionize admin sync, storage, and smoke checks
Entire-Checkpoint: 89df1838cb94

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@ AIRTABLE_BASE_ID=appJAw6Q1CgRc8mCK
 PUBLIC_BASE_URL=http://localhost:3000
 BASIC_AUTH_USERNAME=
 BASIC_AUTH_PASSWORD=
+ADMIN_BASIC_AUTH_USERNAME=
+ADMIN_BASIC_AUTH_PASSWORD=
+ADMIN_AUTO_SYNC_ENABLED=true
+ADMIN_AUTO_SYNC_INTERVAL_MINUTES=60
+ADMIN_SYNC_CRON_SECRET=
 MAX_UPLOAD_SIZE_BYTES=20971520
 SUBMIT_RATE_LIMIT_MAX=10
 SEARCH_RATE_LIMIT_MAX=120
@@ -19,9 +24,17 @@ NEXT_PUBLIC_SUBMIT_MAX_ATTEMPTS=3
 NEXT_PUBLIC_SUBMIT_BASE_BACKOFF_MS=350
 NEXT_PUBLIC_SUBMIT_MAX_BACKOFF_MS=4000
 UPLOAD_STORAGE_DRIVER=local
+S3_BUCKET=
+S3_REGION=auto
+S3_ENDPOINT=
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_FORCE_PATH_STYLE=true
+S3_UPLOAD_PREFIX=uploads
 UPLOAD_RETENTION_HOURS=72
 UPLOAD_CLEANUP_INTERVAL_MS=600000
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
 TELEMETRY_ENABLED=true
 TELEMETRY_SAMPLE_RATE=1
+SUBMIT_DRY_RUN=false
