--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "smoke:submit": "node scripts/smoke-submit.mjs"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.922.0",
     "@hookform/resolvers": "^4.1.0",
     "@upstash/redis": "^1.36.2",
     "next": "^15.2.0",
